# hass-miner

./: .devcontainer.json  .ruff.toml  pyproject.toml
custom_components/miner/: coordinator.py  manifest.json  select.py  switch.py
scripts/: lint  setup
tests/: test_switch.py
