[project]
name = "hass-miner"
version = "1.1.19"
description = ""
authors = [{ name = "Michael Schmid", email = "michael@amazee.com" }]
readme = "README.md"
dependencies = [
    "homeassistant>=2025.2.3",
    "colorlog>=6.9.0",
    "pyasic>=0.72.9",
    "setuptools>=75.6.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.8.4", "pre-commit>=4.0.1"]
